force-app/main/default/objects/CPQ_Export_Log__c/CPQ_Export_Log__c.object-meta.xml
<CustomObject>
    <label>CPQ Export Log</label>
    <nameField>
        <displayFormat>EL - {000000}</displayFormat>
        <label>CPQ Export Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Export Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>