force-app/main/default/objects/CPQ_Export_Log__c/fields/Complete_Request__c.field-meta.xml
<CustomField>
    <fullName>Complete_Request__c</fullName>
    <label>Complete Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>