force-app/main/default/objects/CPQ_Export_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>CPQ Export Logs</relationshipLabel>
    <relationshipName>CPQ_Export_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>