force-app/main/default/objects/CPQ_Export_Log__c/fields/Order_Conditions_Request__c.field-meta.xml
<CustomField>
    <fullName>Order_Conditions_Request__c</fullName>
    <label>Order Conditions Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>