force-app/main/default/objects/CPQ_Export_Log__c/fields/Order_Header_Request__c.field-meta.xml
<CustomField>
    <fullName>Order_Header_Request__c</fullName>
    <label>Order Header Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>