force-app/main/default/objects/CPQ_Export_Log__c/fields/Order_Items_Request__c.field-meta.xml
<CustomField>
    <fullName>Order_Items_Request__c</fullName>
    <label>Order Items Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>