force-app/main/default/objects/CPQ_Export_Log__c/fields/Resubmit__c.field-meta.xml
<CustomField>
    <fullName>Resubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmit</label>
    <type>Checkbox</type>
</CustomField>