force-app/main/default/objects/CPQ_Export_Log__c/fields/Serial_Numbers_Request__c.field-meta.xml
<CustomField>
    <fullName>Serial_Numbers_Request__c</fullName>
    <label>Serial Numbers Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>